emo model final

--- a/EMO_MODEL.ipynb
+++ b/EMO_MODEL.ipynb
@@ -509,7 +509,6 @@
         "        if self.prompt is not None:\n",
         "          for i, p in enumearate(self.prompt[index]):\n",
         "            prompt += \" \" + str(p)\n",
-        "            print(\"sono in prompt\")\n",
         "\n",
         "        text = essay\n",
         "        text_pair = None\n",
@@ -625,10 +624,9 @@
       },
       "outputs": [],
       "source": [
-        "TRAIN_DATA = f\"{repo_path}{branch}/datasets/WASSA23_essay_level_original_internal_train_preproc_prompt.tsv\"\n",
-        "VAL_DATA = f\"{repo_path}{branch}/datasets/WASSA23_essay_level_original_internal_val_preproc_prompt.tsv\"\n",
-        "DEV_DATA = f\"{repo_path}{branch}/datasets/WASSA23_essay_level_dev_preproc_prompt.tsv\"\n",
-        "#TODO: cambiare path quando abbiamo rifatto i dataset"
+        "TRAIN_DATA = f\"{repo_path}{branch}/datasets/WASSA23_essay_level_original_internal_train_preproc.tsv\"\n",
+        "VAL_DATA = f\"{repo_path}{branch}/datasets/WASSA23_essay_level_original_internal_val_preproc.tsv\"\n",
+        "DEV_DATA = f\"{repo_path}{branch}/datasets/WASSA23_essay_level_dev_preproc.tsv\""
       ]
     },
     {
@@ -720,11 +718,11 @@
       "outputs": [],
       "source": [
         "#@title Model Class\n",
-        "MODEL_CLASS = \"BertForSequenceClassification\" #@param [\"BertForSequenceClassification\", \"RobertaForSequenceClassification\"]\n",
-        "model_id = 'Bert' #@param {type:\"string\"}\n",
+        "MODEL_CLASS_STRING = \"BertForSequenceClassification\" #@param [\"BertForSequenceClassification\", \"RobertaForSequenceClassification\"]\n",
+        "model_id = 'BertBase' #@param {type:\"string\"}\n",
         "model_name = 'bert-base' #@param [\"bert-base\", \"roberta-base\"]\n",
         "\n",
-        "if MODEL_CLASS == \"BertForSequenceClassification\":\n",
+        "if MODEL_CLASS_STRING == \"BertForSequenceClassification\":\n",
         "  MODEL_CLASS = BertForSequenceClassification  \n",
         "else:\n",
         "  MODEL_CLASS = RobertaForSequenceClassification"
@@ -1006,19 +1004,19 @@
       ],
       "source": [
         "model_config = {\n",
-        "        'model_id': model_id,\n",
-        "        'tokenizer_name': model_type.get(model_name),\n",
-        "        'model_name': model_type.get(model_name),\n",
-        "        'train_batch_size': 8,\n",
-        "        'val_batch_size': 8,\n",
-        "        'learning_rate': 5e-5,\n",
-        "        'weight_decay': 0,\n",
-        "        'epochs': 30,\n",
-        "        'seed': 42,\n",
-        "        'patience': 5,\n",
-        "        'early_stopping_threshold': 0,\n",
-        "        'weighted_loss': True\n",
-        "    }\n",
+        "    'model_id': model_id,\n",
+        "    'tokenizer_name': model_type.get(model_name),\n",
+        "    'model_name': model_type.get(model_name),\n",
+        "    'train_batch_size': 8,\n",
+        "    'val_batch_size': 8,\n",
+        "    'learning_rate': 5e-5,\n",
+        "    'weight_decay': 0,\n",
+        "    'epochs': 30,\n",
+        "    'seed': 42,\n",
+        "    'patience': 5,\n",
+        "    'early_stopping_threshold': 0,\n",
+        "    'weighted_loss': True\n",
+        "}\n",
         "\n",
         "path_tosave = f\"{model_config['model_id']}\"\n",
         "!mkdir $path_tosave"
@@ -1146,10 +1144,10 @@
         "        self.loss_weights = loss_weights\n",
         "        self.last_cls = last_cls\n",
         "        self.mean_last_cls = mean_last_cls\n",
-        "        if MODEL_CLASS == BertForSequenceClassification:\n",
-        "          self.pretrained_model = BertModel(config)\n",
+        "        if MODEL_CLASS_STRING == \"BertForSequenceClassification\":\n",
+        "          self.bert = BertModel(config)\n",
         "        else:\n",
-        "          self.pretrained_model = RobertaModel(config)\n",
+        "          self.bert = RobertaModel(config)\n",
         "        classifier_dropout = (\n",
         "            config.classifier_dropout if config.classifier_dropout is not None else config.hidden_dropout_prob\n",
         "        )\n",
@@ -1181,7 +1179,7 @@
         "\n",
         "        return_dict = return_dict if return_dict is not None else self.config.use_return_dict\n",
         "\n",
-        "        outputs = self.pretrained_model(\n",
+        "        outputs = self.bert(\n",
         "            input_ids,\n",
         "            attention_mask=attention_mask,\n",
         "            token_type_ids=token_type_ids,\n",
@@ -1362,13 +1360,13 @@
       "source": [
         "train_set = WASSADataset(tokenizer=tokenizer,\n",
         "                    essay=train_df.essay,\n",
-        "                    #prompt=train_prompt,\n",
+        "                    #prompt=train_df.prompt,\n",
         "                    #sep=True,\n",
         "                    essay_id = train_df.essay_id,\n",
         "                    targets=y_train,\n",
         "                    #EMO_lexicon=EMO_lexicon_train_dict,\n",
         "                    #EMP_lexicon=EMP_lexicon_train_dict,\n",
-        "                    #global_features = features_train,\n",
+        "                    global_features = features_train,\n",
         "                    #local_emotions = True,\n",
         "                    #local_empathy = True,\n",
         "                    #local_distress = True\n",
@@ -1376,26 +1374,26 @@
         "\n",
         "val_set = WASSADataset(tokenizer=tokenizer,\n",
         "                    essay=val_df.essay,\n",
-        "                    #prompt=val_prompt,\n",
+        "                    #prompt=val_df.prompt,\n",
         "                    #sep=True,\n",
         "                    essay_id = val_df.essay_id,\n",
         "                    targets=y_val,\n",
         "                    #EMO_lexicon=EMO_lexicon_train_dict,\n",
         "                    #EMP_lexicon=EMP_lexicon_train_dict,\n",
-        "                    #global_features = features_val,\n",
+        "                    global_features = features_val,\n",
         "                    #local_emotions = True,\n",
         "                    #local_empathy = True,\n",
         "                    #local_distress = True\n",
         "                )\n",
         "dev_set = WASSADataset(tokenizer=tokenizer,\n",
         "                    essay=dev_df.essay,\n",
-        "                    #prompt=dev_prompt,\n",
+        "                    #prompt=dev_df.prompt,\n",
         "                    #sep=True,\n",
         "                    essay_id = dev_df.essay_id,\n",
         "                    targets=y_dev,\n",
         "                    #EMO_lexicon=EMO_lexicon_train_dict,\n",
         "                    #EMP_lexicon=EMP_lexicon_train_dict,\n",
-        "                    #global_features = features_dev,\n",
+        "                    global_features = features_dev,\n",
         "                    #local_emotions = True,\n",
         "                    #local_empathy = True,\n",
         "                    #local_distress = True\n",
@@ -1721,11 +1719,7 @@
         "for metric in metrics:\n",
         "  eval_metrics_values.append([log.get(metric) for log in train_logs if log.get(metric) is not None])\n",
         "train_epochs = [log.get('epoch') for log in train_logs if log.get('loss') is not None]\n",
-        "eval_epochs = [log.get('epoch') for log in train_logs if log.get('eval_loss') is not None]\n",
-        "\n",
-        "\n",
-        "best_epoch_train = np.argmax([(log.get('eval_macro_f1'), log.get('epoch'))for log in train_logs if log.get('eval_loss') is not None])\n",
-        "best_counter_val = np.argmax([log.get('eval_macro_f1')for log in train_logs if log.get('eval_loss') is not None])"
+        "eval_epochs = [log.get('epoch') for log in train_logs if log.get('eval_loss') is not None]"
       ]
     },
     {
