--- a/EMO_MODEL.ipynb
+++ b/EMO_MODEL.ipynb
@@ -1719,6 +1719,8 @@
         "for metric in metrics:\n",
         "  eval_metrics_values.append([log.get(metric) for log in train_logs if log.get(metric) is not None])\n",
         "train_epochs = [log.get('epoch') for log in train_logs if log.get('loss') is not None]\n",
+        "eval_epochs = [log.get('epoch') for log in train_logs if log.get('eval_loss') is not None]\n",
+        "train_epochs = [log.get('epoch') for log in train_logs if log.get('loss') is not None]\n",
         "eval_epochs = [log.get('epoch') for log in train_logs if log.get('eval_loss') is not None]"
       ]
     },
