--- a/EMO_MODEL.ipynb
+++ b/EMO_MODEL.ipynb
@@ -1720,8 +1720,8 @@
         "  eval_metrics_values.append([log.get(metric) for log in train_logs if log.get(metric) is not None])\n",
         "train_epochs = [log.get('epoch') for log in train_logs if log.get('loss') is not None]\n",
         "eval_epochs = [log.get('epoch') for log in train_logs if log.get('eval_loss') is not None]\n",
-        "train_epochs = [log.get('epoch') for log in train_logs if log.get('loss') is not None]\n",
-        "eval_epochs = [log.get('epoch') for log in train_logs if log.get('eval_loss') is not None]"
+        "best_epoch_train = np.argmax([(log.get('eval_macro_f1'), log.get('epoch'))for log in train_logs if log.get('eval_loss') is not None])\n",
+        "best_counter_val = np.argmax([log.get('eval_macro_f1')for log in train_logs if log.get('eval_loss') is not None])"
       ]
     },
     {
