--- a/EMO_MODEL.ipynb
+++ b/EMO_MODEL.ipynb
@@ -749,6 +749,8 @@
         "emo_count_global = True #@param {type:\"boolean\"}\n",
         "empathy_count_global = True #@param {type:\"boolean\"}\n",
         "distress_count_global = True #@param {type:\"boolean\"}\n",
+        "gold_empathy = True #@param {type:\"boolean\"}\n",
+        "gold_distress = True #@param {type:\"boolean\"}\n",
         "bio_global = True #@param {type:\"boolean\"}\n",
         "global_features_names = []\n",
         "emotions_count = ['fear_count',\t'anger_count','anticipation_count',\t'trust_count',\n",
@@ -757,8 +759,10 @@
         "bio = ['gender', 'age', 'income', 'race', 'education']\n",
         "if emo_count_global:\n",
         "  for emo in emotions_count: global_features_names.append(emo)\n",
-        "if empathy_count_global: global_features_names.append('empathy')\n",
-        "if distress_count_global: global_features_names.append('distress')\n",
+        "if empathy_count_global: global_features_names.append('empathy_count')\n",
+        "if distress_count_global: global_features_names.append('distress_count')\n",
+        "if gold_empathy: global_features_names.append('empathy')\n",
+        "if gold_distress: global_features_names.append('distress')\n",
         "if bio_global:\n",
         "  for b in bio: global_features_names.append(b)\n"
       ]
