--- a/EMO_MODEL.ipynb
+++ b/EMO_MODEL.ipynb
@@ -1132,6 +1132,7 @@
         "        self.out_proj = nn.Linear(total_dims, config.num_labels)\n",
         "\n",
         "    def forward(self, features, **kwargs):\n",
+        "        features = features.to(torch.float32) # by default float32 is used as the dtype \n"
         "        x = self.dense(features)\n",
         "        x = torch.tanh(x)\n",
         "        x = self.dropout(x)\n",
