--- a/prova.ipynb
+++ b/prova.ipynb
@@ -124,142 +124,50 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "72\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(len(['Reading', 'about', 'the', 'attack', 'on', 'Paris', 'that', 'happened', 'years', 'ago', 'brought', 'up', 'a', 'lot', 'of', 'bad', 'feelings', 'and', 'thoughts', '.', 'I', 'had', 'completely', 'forgot', '##ton', 'about', 'it', 'because', 'of', 'how', 'often', 'things', 'like', 'that', 'happen', '.', 'It', 'makes', 'me', 'upset', 'to', 'think', 'that', 'we', 'are', 'becoming', 'numb', 'to', 'terror', 'attacks', 'in', 'a', 'way', '.', 'i', 'can', 'only', 'hope', 'that', 'the', 'people', 'affected', 'have', 'found', 'peace', 'and', 'eventually', 'we', 'all', 'will', 'find', 'peace']))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
    "outputs": [],
    "source": [
-    "s = 'This was sad and I hope they can do something about it.  I hate that the wildlife is suffering since it is so innocent.  Maybe the government should make more efforts to fix this situation or at least improve it.  I get that it takes resources to do things but maybe they could find some small way to make a difference.  It seems like the ecosystem is in serious danger if nothing is done so someone needs to act fast for the sake of the animals who are helpless victims of this situation.'"
+    "import pandas as pd\n",
+    "path = 'logist_errate.pkl'\n",
+    "obj = pd.read_pickle(path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "s = \"There was this crazy story in the news the other day. Two guys were shot in Pennsylvania. One was shot twice in the stomach and the other was shot in the back. There were no arrests or anything and there was not stated motive. I wonder if it was a random thing or if they were involved with drugs or something? I guess we'll never know...\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "66"
+       "[array([-8.064367 , -7.201281 , -6.8728104, -5.240647 , -6.4233584,\n",
+       "         0.7787335,  1.9870163, -7.222992 ], dtype=float32),\n",
+       " array([-6.944066 ,  1.7112933, -6.1993055, -6.051587 , -6.8772316,\n",
+       "        -1.3442721, -3.657677 , -5.2473454], dtype=float32),\n",
+       " array([-4.6992183, -4.982564 , -6.7400994, -6.209856 , -6.613549 ,\n",
+       "         4.45661  , -6.5877223, -6.761219 ], dtype=float32),\n",
+       " array([-4.8130465, -4.5439067, -3.2511902, -6.1554418, -6.4552383,\n",
+       "        -7.0971675,  6.6741643, -6.376077 ], dtype=float32),\n",
+       " array([-5.1539335, -6.333181 , -5.293275 , -7.0705185, -7.1192274,\n",
+       "        -4.202336 ,  5.933602 , -7.339711 ], dtype=float32),\n",
+       " array([-3.8355594,  4.414359 , -5.0458574, -5.4942336, -5.8431177,\n",
+       "        -6.23308  ,  1.7687093, -5.4080048], dtype=float32),\n",
+       " array([-6.409288 , -6.191746 , -5.83625  , -5.684992 , -6.1039276,\n",
+       "         4.9795356, -5.9744163, -6.1504884], dtype=float32),\n",
+       " array([-6.221209 , -6.0350413, -5.4647164, -6.5888824, -6.9954085,\n",
+       "        -6.434654 ,  5.80316  , -6.500257 ], dtype=float32),\n",
+       " array([-6.284244 , -6.4838324, -6.634144 , -4.7318416, -7.145549 ,\n",
+       "        -5.8867307,  5.9607797, -6.9962487], dtype=float32),\n",
+       " array([-5.998175 , -6.3112483, -7.089682 , -7.337433 , -7.558521 ,\n",
+       "         2.8974028, -1.7447139, -7.078431 ], dtype=float32)]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(s.split())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "66"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len([\n",
-    "   4,\n",
-    "   4,\n",
-    "   3.05373436517482,\n",
-    "   2.42988039575994,\n",
-    "   3.76593087701793,\n",
-    "   2.59070569509,\n",
-    "   2.65099708126283,\n",
-    "   3.20764554684173,\n",
-    "   2.65099708126283,\n",
-    "   1.55666500530337,\n",
-    "   3.00144740042587,\n",
-    "   4,\n",
-    "   1.67445183677988,\n",
-    "   3.86634088988836,\n",
-    "   3.75049209572393,\n",
-    "   2.59070569509,\n",
-    "   4,\n",
-    "   4,\n",
-    "   4,\n",
-    "   3.75049209572393,\n",
-    "   3.21761047844568,\n",
-    "   2.59070569509,\n",
-    "   2.65099708126283,\n",
-    "   4.41641556729266,\n",
-    "   4.33489631791226,\n",
-    "   2.65099708126283,\n",
-    "   1.55666500530337,\n",
-    "   4,\n",
-    "   3.75049209572393,\n",
-    "   2.59070569509,\n",
-    "   2.65099708126283,\n",
-    "   3.59280108512106,\n",
-    "   4,\n",
-    "   3.86634088988836,\n",
-    "   1.8611702712882,\n",
-    "   4.01371924304526,\n",
-    "   3.02533050744174,\n",
-    "   1.18825635366757,\n",
-    "   4.33489631791226,\n",
-    "   2.43931093628622,\n",
-    "   4,\n",
-    "   1.68941456950517,\n",
-    "   2.79064480038931,\n",
-    "   3.6521765490467,\n",
-    "   4,\n",
-    "   3.08356133567987,\n",
-    "   1.85268951336544,\n",
-    "   3.19037090118426,\n",
-    "   4,\n",
-    "   2.69468883289707,\n",
-    "   1.94668636581287,\n",
-    "   1.9245234038762,\n",
-    "   3.02533050744174,\n",
-    "   1.85268951336544,\n",
-    "   3.5475058347319,\n",
-    "   3.86634088988836,\n",
-    "   2.59824727666639,\n",
-    "   3.41062457369878,\n",
-    "   3.03678746418871,\n",
-    "   3.02533050744174,\n",
-    "   2.29580716028414,\n",
-    "   4,\n",
-    "   1.17586902799098,\n",
-    "   4.79368933807434,\n",
-    "   1.78987218211962,\n",
-    "   3.63079591065561\n",
-    "  ])"
+    "obj[:10]"
    ]
   }
  ],
@@ -279,7 +187,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.9"
   },
   "orig_nbformat": 4
  },
