--- a/prova.ipynb
+++ b/prova.ipynb
@@ -2,6 +2,83 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "\n",
+    "l = []\n",
+    "for i in range(len(gold_emotions)):\n",
+    "  if gold_emotions[i] != predicted_emotions[i]:\n",
+    "    l.append(i)\n",
+    "  \n",
+    "s = []\n",
+    "for i in l:\n",
+    "  s.append(outs.predictions[0][i])\n",
+    "\n",
+    "# open a file, where you ant to store the data\n",
+    "file = open('logist_errate.pkl', 'wb')\n",
+    "\n",
+    "# dump information to that file\n",
+    "pickle.dump(s, file)\n",
+    "\n",
+    "# close the file\n",
+    "file.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "path = 'logist_errate.pkl'\n",
+    "obj = pd.read_pickle(path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[array([-8.064367 , -7.201281 , -6.8728104, -5.240647 , -6.4233584,\n",
+       "         0.7787335,  1.9870163, -7.222992 ], dtype=float32),\n",
+       " array([-6.944066 ,  1.7112933, -6.1993055, -6.051587 , -6.8772316,\n",
+       "        -1.3442721, -3.657677 , -5.2473454], dtype=float32),\n",
+       " array([-4.6992183, -4.982564 , -6.7400994, -6.209856 , -6.613549 ,\n",
+       "         4.45661  , -6.5877223, -6.761219 ], dtype=float32),\n",
+       " array([-4.8130465, -4.5439067, -3.2511902, -6.1554418, -6.4552383,\n",
+       "        -7.0971675,  6.6741643, -6.376077 ], dtype=float32),\n",
+       " array([-5.1539335, -6.333181 , -5.293275 , -7.0705185, -7.1192274,\n",
+       "        -4.202336 ,  5.933602 , -7.339711 ], dtype=float32),\n",
+       " array([-3.8355594,  4.414359 , -5.0458574, -5.4942336, -5.8431177,\n",
+       "        -6.23308  ,  1.7687093, -5.4080048], dtype=float32),\n",
+       " array([-6.409288 , -6.191746 , -5.83625  , -5.684992 , -6.1039276,\n",
+       "         4.9795356, -5.9744163, -6.1504884], dtype=float32),\n",
+       " array([-6.221209 , -6.0350413, -5.4647164, -6.5888824, -6.9954085,\n",
+       "        -6.434654 ,  5.80316  , -6.500257 ], dtype=float32),\n",
+       " array([-6.284244 , -6.4838324, -6.634144 , -4.7318416, -7.145549 ,\n",
+       "        -5.8867307,  5.9607797, -6.9962487], dtype=float32),\n",
+       " array([-5.998175 , -6.3112483, -7.089682 , -7.337433 , -7.558521 ,\n",
+       "         2.8974028, -1.7447139, -7.078431 ], dtype=float32)]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "obj[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [
@@ -118,56 +195,6 @@
     "new_dev = add_prompt(dev_df)\n",
     "new_dev.to_csv(f\"datasets/WASSA{year}_essay_level_dev_preproc_prompt.tsv\", index=False, sep='\\t')\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "path = 'logist_errate.pkl'\n",
-    "obj = pd.read_pickle(path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[array([-8.064367 , -7.201281 , -6.8728104, -5.240647 , -6.4233584,\n",
-       "         0.7787335,  1.9870163, -7.222992 ], dtype=float32),\n",
-       " array([-6.944066 ,  1.7112933, -6.1993055, -6.051587 , -6.8772316,\n",
-       "        -1.3442721, -3.657677 , -5.2473454], dtype=float32),\n",
-       " array([-4.6992183, -4.982564 , -6.7400994, -6.209856 , -6.613549 ,\n",
-       "         4.45661  , -6.5877223, -6.761219 ], dtype=float32),\n",
-       " array([-4.8130465, -4.5439067, -3.2511902, -6.1554418, -6.4552383,\n",
-       "        -7.0971675,  6.6741643, -6.376077 ], dtype=float32),\n",
-       " array([-5.1539335, -6.333181 , -5.293275 , -7.0705185, -7.1192274,\n",
-       "        -4.202336 ,  5.933602 , -7.339711 ], dtype=float32),\n",
-       " array([-3.8355594,  4.414359 , -5.0458574, -5.4942336, -5.8431177,\n",
-       "        -6.23308  ,  1.7687093, -5.4080048], dtype=float32),\n",
-       " array([-6.409288 , -6.191746 , -5.83625  , -5.684992 , -6.1039276,\n",
-       "         4.9795356, -5.9744163, -6.1504884], dtype=float32),\n",
-       " array([-6.221209 , -6.0350413, -5.4647164, -6.5888824, -6.9954085,\n",
-       "        -6.434654 ,  5.80316  , -6.500257 ], dtype=float32),\n",
-       " array([-6.284244 , -6.4838324, -6.634144 , -4.7318416, -7.145549 ,\n",
-       "        -5.8867307,  5.9607797, -6.9962487], dtype=float32),\n",
-       " array([-5.998175 , -6.3112483, -7.089682 , -7.337433 , -7.558521 ,\n",
-       "         2.8974028, -1.7447139, -7.078431 ], dtype=float32)]"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "obj[:10]"
    ]
   }
  ],
