--- a/WASSA23_FINAL_new.ipynb
+++ b/WASSA23_FINAL_new.ipynb
@@ -1848,7 +1848,7 @@
         "    learning_rate=config.get('learning_rate'),\n",
         "    weight_decay=config.get('weight_decay'),\n",
         "    load_best_model_at_end=True,\n",
-        "    metric_for_best_model = metric_for_val,\n",
+        "    metric_for_best_model = "eval_loss",\n",
         "    seed=config.get('seed'),\n",
         ") # TODO: custom other params"
       ]
