--- a/finale.ipynb
+++ b/finale.ipynb
@@ -2190,17 +2190,7 @@
         "# Access the training logs\n",
         "train_logs = trainer.state.log_history\n",
         "\n",
-        "metrics = [list(log.keys())[:-5] for log in train_logs if log.get('eval_loss') is not None][0]\n",
-        "\n",
-        "eval_metrics_values = []\n",
-        "\n",
-        "# Extract the values from the logs\n",
-        "# train_loss_values = [log.get('loss') for log in train_logs if log.get('loss') is not None]\n",
-        "# eval_loss_values = [log.get('eval_loss') for log in train_logs if log.get('eval_loss') is not None]\n",
-        "# for metric in metrics:\n",
-        "#   eval_metrics_values.append([log.get(metric) for log in train_logs if log.get(metric) is not None])\n",
-        "# train_epochs = [log.get('epoch') for log in train_logs if log.get('loss') is not None]\n",
-        "# eval_epochs = [log.get('epoch') for log in train_logs if log.get('eval_loss') is not None]\n",
+        "metrics = [list(log.keys())[:-5] for log in train_logs if log.get('eval_loss') is not None][0]predic\n",
         "\n",
         "train_loss_values = []\n",
         "eval_loss_values = []\n",
