small code fixes

--- a/finale.ipynb
+++ b/finale.ipynb
@@ -2190,7 +2190,7 @@
         "# Access the training logs\n",
         "train_logs = trainer.state.log_history\n",
         "\n",
-        "metrics = [list(log.keys())[:-5] for log in train_logs if log.get('eval_loss') is not None][0]predic\n",
+        "metrics = [list(log.keys())[:-5] for log in train_logs if log.get('eval_loss') is not None][0]\n",
         "\n",
         "train_loss_values = []\n",
         "eval_loss_values = []\n",
@@ -2315,9 +2315,9 @@
       "source": [
         "fig_name = \"metrics\"\n",
         "plot_metric_curve(\n",
-        "    values = eval_metrics_values,\n",
-        "    epochs = [eval_epochs for _ in eval_metrics_values],\n",
-        "    metrics = metrics,\n",
+        "    values = eval_metrics_values[1:],\n",
+        "    epochs = eval_epochs,\n",
+        "    metrics = metrics[1:],\n",
         "    title = fig_name,\n",
         "    path = f\"{path_tosave}/{fig_name}.png\")"
       ]
@@ -2560,20 +2560,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "pICFK9byN6f0"
-      },
-      "outputs": [],
-      "source": [
-        "# move the best checkpoint in the folder with model id\n",
-        "best_model_path = trainer.state.best_model_checkpoint\n",
-        "\n",
-        "!mv $best_model_path /content/$path_tosave"
-      ]
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "9pkHv9w4tM1F"
@@ -2646,6 +2632,18 @@
       },
       "source": [
         "## Save on Google Drive"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# move the best checkpoint in the folder with model id\n",
+        "best_model_path = trainer.state.best_model_checkpoint\n",
+        "\n",
+        "!mv $best_model_path /content/$path_tosave"
       ]
     },
     {
