--- a/WASSA23_test_kfold.ipynb
+++ b/WASSA23_test_kfold.ipynb
@@ -654,7 +654,7 @@
       },
       "outputs": [],
       "source": [
-        "TRAIN_DATA = f\"{repo_path}{branch}/datasets/train_upsampled.tsv\"\n",
+        "TRAIN_DATA = f\"{repo_path}{branch}/datasets/WASSA23_essay_level_train_preproc_upsampled.tsv\"\n",
         "DEV_DATA = f\"{repo_path}{branch}/datasets/WASSA_essay_level_dev_preproc.tsv\"\n",
         "\n",
         "train_df= pd.read_csv(TRAIN_DATA, sep='\\t')\n",
@@ -669,7 +669,7 @@
       },
       "outputs": [],
       "source": [
-        "split_dfs = dev_cross_val_(train_df, dev_df, 3, False, None)"
+        "split_dfs = dev_cross_val(train_df, dev_df, 3, False, None)"
       ]
     },
     {
