--- a/finale.ipynb
+++ b/finale.ipynb
@@ -2316,7 +2316,7 @@
         "fig_name = \"metrics\"\n",
         "plot_metric_curve(\n",
         "    values = eval_metrics_values[1:],\n",
-        "    epochs = eval_epochs,\n",
+        "    epochs = [eval_epochs for _ in eval_metrics_values[1:]],\n",
         "    metrics = metrics[1:],\n",
         "    title = fig_name,\n",
         "    path = f\"{path_tosave}/{fig_name}.png\")"
