--- a/finale.ipynb
+++ b/finale.ipynb
@@ -2463,8 +2463,8 @@
         "write_predictions(predictions, path_predictions)\n",
         "challenge_metrics = compute_metrics(golds=golds, predictions=predictions, task=TASK)\n",
         "scores.update(challenge_metrics)\n",
-        "scores['best_metric'] = float(best_metric),\n",
-        "scores['best_epoch_metric'] = float(best_epoch_metric),\n",
+        "scores['best_metric'] = float(best_metric)\n",
+        "scores['best_epoch_metric'] = float(best_epoch_metric)\n",
         "scores['best_epoch_eval_loss'] =  float(best_epoch_eval_loss)\n",
         "\n",
         "write_dict_to_json(scores, path_metrics)\n",
