--- a/WASSA23_test_kfold.ipynb
+++ b/WASSA23_test_kfold.ipynb
@@ -497,8 +497,8 @@
         "        essay,\n",
         "        essay_id,\n",
         "        targets,\n",
-        "        sep=False,\n",
-        "        prompt=None,\n",
+        "        prompt_before_SEP=None,\n",
+        "        prompt_after_SEP=None,\n",
         "        EMP_lexicon = None,\n",
         "        EMO_lexicon = None,\n",
         "        global_features = None,\n",
@@ -514,8 +514,9 @@
         "        self.targets = targets\n",
         "        self.EMP_lexicon = EMP_lexicon\n",
         "        self.EMO_lexicon = EMO_lexicon\n",
-        "        self.sep = sep\n",
-        "        self.prompt = prompt\n",
+        "        \n",
+        "        self.prompt_before_SEP = prompt_before_SEP\n",
+        "        self.prompt_after_SEP = prompt_after_SEP\n",
         "\n",
         "        self.global_features = global_features\n",
         "        self.local_emotions = local_emotions\n",
@@ -530,18 +531,22 @@
         "\n",
         "        essay_id = self.essay_id[index]\n",
         "\n",
-        "        prompt = \"\"\n",
-        "        if self.prompt is not None:\n",
-        "          for i, p in enumerate(self.prompt[index]):\n",
-        "            prompt += \" \" + str(p)\n",
+        "        prompt_before_SEP = \"\"\n",
+        "        if self.prompt_before_SEP is not None:\n",
+        "          for p in self.prompt_before_SEP[index]:\n",
+        "            prompt_before_SEP += \" \" + str(p)\n",
+        "\n",
+        "        prompt_after_SEP = \"\"\n",
+        "        if self.prompt_after_SEP is not None:\n",
+        "          for p in self.prompt_after_SEP[index]:\n",
+        "            prompt_after_SEP += \" \" + str(p)\n",
         "\n",
         "        text = essay\n",
         "        text_pair = None\n",
-        "        if self.sep:\n",
-        "          text_pair = prompt\n",
-        "        else:\n",
-        "          if self.prompt is not None:\n",
-        "            text += prompt\n",
+        "        if prompt_before_SEP != \"\":\n",
+        "          text += str(prompt_before_SEP)\n",
+        "        if prompt_after_SEP != \"\":\n",
+        "          text_pair = str(prompt_after_SEP)\n",
         "\n",
         "        inputs = self.tokenizer.encode_plus(\n",
         "            text=essay,\n",
@@ -604,13 +609,7 @@
         "          if char not in string.punctuation:\n",
         "            if self.local_emotions:\n",
         "              for i, emo in enumerate(EMOTIONS_NAMES):\n",
-        "                try:\n",
-        "                  features_tokens[token_idx][i] = self.EMO_lexicon[str(essay_id)][emo][word_count]\n",
-        "                except IndexError:\n",
-        "                  print(essay_id)\n",
-        "                  print(word_count)\n",
-        "                  print(essay)\n",
-        "                  print(len(self.EMO_lexicon[str(essay_id)][emo]))\n",
+        "                features_tokens[token_idx][i] = self.EMO_lexicon[str(essay_id)][emo][word_count]\n",
         "              j += len(EMOTIONS_NAMES)\n",
         "\n",
         "            if self.local_empathy:\n",
@@ -789,18 +788,28 @@
       },
       "outputs": [],
       "source": [
-        "prompt_train = None\n",
-        "prompt_dev = None\n",
-        "prompt_train_splits = []\n",
-        "prompt_dev_splits = []\n",
+        "prompt_before_SEP_train = None\n",
+        "prompt_after_SEP_train = None\n",
+        "prompt_before_SEP_train_splits = []\n",
+        "prompt_after_SEP_train_splits = []\n",
+        "\n",
+        "prompt_before_SEP_dev = None\n",
+        "prompt_after_SEP_dev = None\n",
+        "prompt_before_SEP_dev_splits = []\n",
+        "prompt_after_SEP_dev_splits = []\n",
         "\n",
         "for split_df in split_dfs:\n",
-        "  if len(best_config.get('prompt_names')) > 0:\n",
-        "    prompt_train = np.array(split_df[0][best_config.get('prompt_names')])\n",
-        "    prompt_dev = np.array(split_df[1][best_config.get('prompt_names')])\n",
-        "\n",
-        "    prompt_train_splits.append(prompt_train)\n",
-        "    prompt_dev_splits.append(prompt_dev)"
+        "  if len(best_config.get('prompt_names_before_SEP')) > 0:\n",
+        "    prompt_before_SEP_train = np.array(split_df[0][best_config.get('prompt_names_before_SEP')])\n",
+        "    prompt_before_SEP_dev = np.array(split_df[1][best_config.get('prompt_names_before_SEP')])\n",
+        "    prompt_before_SEP_train_splits.append(prompt_before_SEP_train)\n",
+        "    prompt_before_SEP_dev_splits.append(prompt_before_SEP_dev)\n",
+        "    \n",
+        "  if len(best_config.get('prompt_names_after_SEP')) > 0:\n",
+        "    prompt_after_SEP_train = np.array(split_df[0][best_config.get('prompt_names_after_SEP')])\n",
+        "    prompt_after_SEP_dev = np.array(split_df[1][best_config.get('prompt_names_after_SEP')])\n",
+        "    prompt_after_SEP_train_splits.append(prompt_after_SEP_train)\n",
+        "    prompt_after_SEP_dev_splits.append(prompt_after_SEP_dev)"
       ]
     },
     {
@@ -874,10 +883,13 @@
       },
       "outputs": [],
       "source": [
-        "def get_loss_weights(y):\n",
-        "  inverse_n_samples = 1 / np.sum(y, axis=0)\n",
-        "  sum_inverses = sum(inverse_n_samples)\n",
-        "  weights_train = inverse_n_samples / sum_inverses\n",
+        "def get_loss_weights(y, method):\n",
+        "  if method == 'balanced':\n",
+        "    weights_train = y.shape[0] / (y.shape[1] * np.sum(y, axis=0))\n",
+        "  else:\n",
+        "    inverse_n_samples = 1 / np.sum(y, axis=0)\n",
+        "    sum_inverses = sum(inverse_n_samples)\n",
+        "    weights_train = inverse_n_samples / sum_inverses\n",
         "  return torch.cuda.FloatTensor(weights_train)"
       ]
     },
@@ -898,8 +910,8 @@
       "outputs": [],
       "source": [
         "loss_weights_train = None\n",
-        "if best_config.get('weighted_loss'):\n",
-        "  loss_weights_train = get_loss_weights(y_train)"
+        "if best_config.get('weighted_loss')!='None':\n",
+        "  loss_weights_train = get_loss_weights(y_train, best_config.get('weighted_loss'))"
       ]
     },
     {
@@ -1342,9 +1354,9 @@
         "\n",
         "  train_set = WASSADataset(tokenizer=tokenizer,\n",
         "                      essay=split_df[0].essay,\n",
-        "                      prompt = prompt_train_splits[i],\n",
-        "                      sep=best_config.get('sep'),\n",
         "                      essay_id = split_df[0].essay_id,\n",
+        "                      prompt_before_SEP=prompt_before_SEP_train_splits[i],\n",
+        "                      prompt_after_SEP=prompt_after_SEP_train_splits[i],\n",
         "                      targets = y_train_splits[i],\n",
         "                      EMO_lexicon = EMO_lexicon_train_dict,\n",
         "                      EMP_lexicon = EMP_lexicon_train_dict,\n",
@@ -1356,9 +1368,9 @@
         "\n",
         "  dev_set = WASSADataset(tokenizer=tokenizer,\n",
         "                      essay=split_df[1].essay,\n",
-        "                      prompt = prompt_dev_splits[i],\n",
-        "                      sep=best_config.get('sep'),\n",
         "                      essay_id = split_df[1].essay_id,\n",
+        "                      prompt_before_SEP=prompt_before_SEP_dev_splits[i],\n",
+        "                      prompt_after_SEP=prompt_after_SEP_dev_splits[i],\n",
         "                      targets = y_dev_splits[i],\n",
         "                      EMO_lexicon = EMO_lexicon_train_dict,\n",
         "                      EMP_lexicon = EMP_lexicon_train_dict,\n",
