--- a/finale_neutral.ipynb
+++ b/finale_neutral.ipynb
@@ -585,28 +585,35 @@
       "source": [
         "#@title Prompt\n",
         "bio_prompt = True #@param {type:\"boolean\"}\n",
+        "bio_sep = 'before SEP' #@param [\"after SEP\", \"before SEP\"]\n",
         "emo_prompt = True #@param {type:\"boolean\"}\n",
+        "emo_sep = 'before SEP' #@param [\"after SEP\", \"before SEP\"]\n",
         "empathy_prompt = True #@param {type:\"boolean\"}\n",
+        "emp_sep = 'before SEP' #@param [\"after SEP\", \"before SEP\"]\n",
         "\n",
-        "prompt_names = []\n",
+        "prompt_names_before_SEP = []\n",
+        "prompt_names_after_SEP = []\n",
         "if bio_prompt:\n",
-        "    prompt_names.append('prompt_bio')\n",
+        "    if bio_sep=='before SEP':\n",
+        "        prompt_names_before_SEP.append('prompt_bio')\n",
+        "    else:\n",
+        "        prompt_names_after_SEP.append('prompt_bio')\n",
         "if empathy_prompt:\n",
-        "    prompt_names.append('prompt_emo')\n",
+        "    if emp_sep=='before SEP':\n",
+        "        prompt_names_before_SEP.append('prompt_emp')\n",
+        "    else:\n",
+        "        prompt_names_after_SEP.append('prompt_emp') \n",
         "if emo_prompt:\n",
-        "    prompt_names.append('prompt_emp')\n",
-        "\n",
-        "sep_string = 'after SEP' #@param [\"after SEP\", \"before SEP\"]\n",
-        "if sep_string == 'after SEP':\n",
-        "  sep = True\n",
-        "else:\n",
-        "  sep = False\n",
+        "    if emo_sep=='before SEP':\n",
+        "        prompt_names_before_SEP.append('prompt_emo')\n",
+        "    else:\n",
+        "        prompt_names_after_SEP.append('prompt_emo')\n",
         "\n",
         "config['bio_prompt'] = bio_prompt\n",
         "config['emo_prompt'] = emo_prompt\n",
         "config['empathy_prompt'] = empathy_prompt\n",
-        "config['prompt_names'] = prompt_names\n",
-        "config['sep'] = sep"
+        "config['prompt_names_before_SEP'] = prompt_names_before_SEP\n",
+        "config['prompt_names_after_SEP'] = prompt_names_after_SEP"
       ]
     },
     {
@@ -649,14 +656,14 @@
       "outputs": [],
       "source": [
         "#@title Model configuration\n",
-        "train_batch_size = 16 #@param {type:\"integer\"}\n",
+        "train_batch_size = 8 #@param {type:\"integer\"}\n",
         "val_batch_size = 8 #@param {type:\"integer\"}\n",
         "learning_rate = 5e-5 #@param {type:\"number\"}\n",
-        "weight_decay = 0.08 #@param {type:\"number\"}\n",
+        "weight_decay = 0 #@param {type:\"number\"}\n",
         "epochs = 30 #@param {type:\"integer\"}\n",
         "patience = 5 #@param {type:\"integer\"}\n",
         "dropout = 0.3 #@param {type:\"number\"}\n",
-        "weighted_loss = False #@param {type:\"boolean\"}\n",
+        "weighted_loss = \"None\" #@param [\"None\", \"normalized_inverse\", \"balanced\"]\n",
         "\n",
         "model_type ={\n",
         "  'distilroberta-emotion':'j-hartmann/emotion-english-distilroberta-base',\n",
@@ -802,8 +809,8 @@
         "        essay,\n",
         "        essay_id,\n",
         "        targets,\n",
-        "        sep=False,\n",
-        "        prompt=None,\n",
+        "        prompt_before_SEP=None,\n",
+        "        prompt_after_SEP=None,\n",
         "        EMP_lexicon = None,\n",
         "        EMO_lexicon = None,\n",
         "        global_features = None,\n",
@@ -819,8 +826,9 @@
         "        self.targets = targets\n",
         "        self.EMP_lexicon = EMP_lexicon\n",
         "        self.EMO_lexicon = EMO_lexicon\n",
-        "        self.sep = sep\n",
-        "        self.prompt = prompt\n",
+        "        \n",
+        "        self.prompt_before_SEP = prompt_before_SEP\n",
+        "        self.prompt_after_SEP = prompt_after_SEP\n",
         "\n",
         "        self.global_features = global_features\n",
         "        self.local_emotions = local_emotions\n",
@@ -835,18 +843,22 @@
         "\n",
         "        essay_id = self.essay_id[index]\n",
         "\n",
-        "        prompt = \"\"\n",
-        "        if self.prompt is not None:\n",
-        "          for i, p in enumerate(self.prompt[index]):\n",
-        "            prompt += \" \" + str(p)\n",
+        "        prompt_before_SEP = \"\"\n",
+        "        if self.prompt_before_SEP is not None:\n",
+        "          for p in self.prompt_before_SEP[index]:\n",
+        "            prompt_before_SEP += \" \" + str(p)\n",
+        "\n",
+        "        prompt_after_SEP = \"\"\n",
+        "        if self.prompt_after_SEP is not None:\n",
+        "          for p in self.prompt_after_SEP[index]:\n",
+        "            prompt_after_SEP += \" \" + str(p)\n",
         "\n",
         "        text = essay\n",
         "        text_pair = None\n",
-        "        if self.sep:\n",
-        "          text_pair = prompt\n",
-        "        else:\n",
-        "          if self.prompt is not None:\n",
-        "            text += prompt\n",
+        "        if prompt_before_SEP != \"\":\n",
+        "          text += str(prompt_before_SEP)\n",
+        "        if prompt_after_SEP != \"\":\n",
+        "          text_pair = str(prompt_after_SEP)\n",
         "\n",
         "        inputs = self.tokenizer.encode_plus(\n",
         "            text=essay,\n",
@@ -1078,14 +1090,22 @@
       },
       "outputs": [],
       "source": [
-        "prompt_train = None\n",
-        "prompt_val = None\n",
-        "prompt_dev = None\n",
+        "prompt_before_SEP_train = None\n",
+        "prompt_after_SEP_train = None\n",
+        "prompt_before_SEP_val = None\n",
+        "prompt_after_SEP_val = None\n",
+        "prompt_before_SEP_dev = None\n",
+        "prompt_after_SEP_dev = None\n",
         "\n",
-        "if len(config.get('prompt_names')) > 0:\n",
-        "  prompt_train = np.array(train_df[config.get('prompt_names')])\n",
-        "  prompt_val = np.array(val_df[config.get('prompt_names')])\n",
-        "  prompt_dev = np.array(dev_df[config.get('prompt_names')])"
+        "if len(config.get('prompt_names_before_SEP')) > 0:\n",
+        "  prompt_before_SEP_train = np.array(train_df[config.get('prompt_names_before_SEP')])\n",
+        "  prompt_before_SEP_val = np.array(val_df[config.get('prompt_names_before_SEP')])\n",
+        "  prompt_before_SEP_dev = np.array(dev_df[config.get('prompt_names_before_SEP')])\n",
+        "  \n",
+        "if len(config.get('prompt_names_after_SEP')) > 0:\n",
+        "  prompt_after_SEP_train = np.array(train_df[config.get('prompt_names_after_SEP')])\n",
+        "  prompt_after_SEP_val = np.array(val_df[config.get('prompt_names_after_SEP')])\n",
+        "  prompt_after_SEP_dev = np.array(dev_df[config.get('prompt_names_after_SEP')])"
       ]
     },
     {
@@ -1158,11 +1178,13 @@
       },
       "outputs": [],
       "source": [
-        "def get_loss_weights(y):\n",
-        "  inverse_n_samples = 1 / np.sum(y, axis=0)\n",
-        "  sum_inverses = sum(inverse_n_samples)\n",
-        "  weights_train = inverse_n_samples / sum_inverses\n",
-        "  #weights_train = y_shape[0] / (y_shape[1] * np.sum(y, axis=0))\n",
+        "def get_loss_weights(y, method):\n",
+        "  if method == 'balanced':\n",
+        "    weights_train = y.shape[0] / (y.shape[1] * np.sum(y, axis=0))\n",
+        "  else:\n",
+        "    inverse_n_samples = 1 / np.sum(y, axis=0)\n",
+        "    sum_inverses = sum(inverse_n_samples)\n",
+        "    weights_train = inverse_n_samples / sum_inverses\n",
         "  return torch.cuda.FloatTensor(weights_train)"
       ]
     },
@@ -1183,8 +1205,8 @@
       "outputs": [],
       "source": [
         "loss_weights_train = None\n",
-        "if model_config.get('weighted_loss'):\n",
-        "  loss_weights_train = get_loss_weights(y_train)"
+        "if model_config.get('weighted_loss')!='None':\n",
+        "  loss_weights_train = get_loss_weights(y_train, model_config.get('weighted_loss'))"
       ]
     },
     {
@@ -1766,13 +1788,13 @@
       "source": [
         "train_set = WASSADataset(tokenizer=tokenizer,\n",
         "                    essay=train_df.essay,\n",
-        "                    prompt=prompt_train,\n",
+        "                    prompt_before_SEP=prompt_before_SEP_train,\n",
+        "                    prompt_after_SEP=prompt_after_SEP_train,\n",
         "                    essay_id = train_df.essay_id,\n",
         "                    targets = y_train,\n",
         "                    global_features = global_features_train,\n",
         "                    EMO_lexicon = EMO_lexicon_train_dict,\n",
         "                    EMP_lexicon = EMP_lexicon_train_dict,\n",
-        "                    sep = config.get('sep'),\n",
         "                    local_emotions = config.get('emo_count_local'),\n",
         "                    local_empathy = config.get('empathy_count_local'),\n",
         "                    local_distress = config.get('distress_count_local')\n",
@@ -1780,26 +1802,26 @@
         "\n",
         "val_set = WASSADataset(tokenizer=tokenizer,\n",
         "                    essay = val_df.essay,\n",
-        "                    prompt = prompt_val,\n",
+        "                    prompt_before_SEP = prompt_before_SEP_val,\n",
+        "                    prompt_after_SEP = prompt_after_SEP_val,\n",
         "                    essay_id = val_df.essay_id,\n",
         "                    targets = y_val,\n",
         "                    global_features = global_features_val,\n",
         "                    EMO_lexicon = EMO_lexicon_train_dict,\n",
         "                    EMP_lexicon = EMP_lexicon_train_dict,\n",
-        "                    sep = config.get('sep'),\n",
         "                    local_emotions = config.get('emo_count_local'),\n",
         "                    local_empathy = config.get('empathy_count_local'),\n",
         "                    local_distress = config.get('distress_count_local')\n",
         "                )\n",
         "dev_set = WASSADataset(tokenizer=tokenizer,\n",
         "                    essay = dev_df.essay,\n",
-        "                    prompt = prompt_dev,\n",
+        "                    prompt_before_SEP = prompt_before_SEP_dev,\n",
+        "                    prompt_after_SEP = prompt_after_SEP_dev,\n",
         "                    essay_id = dev_df.essay_id,\n",
         "                    targets = y_dev,\n",
         "                    global_features = global_features_dev,\n",
         "                    EMO_lexicon = EMO_lexicon_train_dict,\n",
         "                    EMP_lexicon = EMP_lexicon_train_dict,\n",
-        "                    sep = config.get('sep'),\n",
         "                    local_emotions = config.get('emo_count_local'),\n",
         "                    local_empathy = config.get('empathy_count_local'),\n",
         "                    local_distress = config.get('distress_count_local')\n",
